Archive2/58/3a8651b5f8a46c/output
main.cpp:3:22: error: invalid use of 'this' at top level
    typedef decltype(*this) self;
                      ^
